# vrs_linkml

./: 404.html  README.md  about.yaml  index.html  mkdocs.yaml  pyproject.toml  search.html  sitemap.xml
Allele/: index.html
Boolean/: index.html
CURIE/: index.html
ChromosomeLocation/: index.html
ComparatorOptions/: index.html
ComposedSequenceExpression/: index.html
CopyNumber/: index.html
CytobandInterval/: index.html
Date/: index.html
Datetime/: index.html
Decimal/: index.html
DefiniteRange/: index.html
DerivedSequenceExpression/: index.html
Double/: index.html
Feature/: index.html
Float/: index.html
GA4GHVRSDefinitions/: index.html
Gene/: index.html
Haplotype/: index.html
HumanCytoband/: index.html
IndefiniteRange/: index.html
Integer/: index.html
LiteralSequenceExpression/: index.html
Location/: index.html
MolecularVariation/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Number/: index.html
Objectidentifier/: index.html
RepeatedSequenceExpression/: index.html
Residue/: index.html
Sequence/: index.html
SequenceExpression/: index.html
SequenceInterval/: index.html
SequenceLocation/: index.html
SequenceState/: index.html
SimpleInterval/: index.html
String/: index.html
SystemicVariation/: index.html
Text/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
UtilityVariation/: index.html
Variation/: index.html
VariationSet/: index.html
_id/: index.html
chr/: index.html
comparator/: index.html
components/: index.html
copies/: index.html
(+142 files in other folders)
