[tool.poetry]
name = "vrs_linkml"
version = "0.1.0"
description = "LinkML version of GA4GH Variation Representation Specification"
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
linkml = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
