[tool.poetry]
name = "vrs-linkml"
version = "0.1.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schema-automator = "^0.1.4"
linkml = "^1.2.4"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]
linkml = "^1.2.4"
pytest = "^5.2"
mkdocs = "^1.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
